# nlpsandbox-client

./: .env.sample  .gitignore  .openapi-generator-ignore  CONTRIBUTING.md  DatasetApi.html  Dockerfile  LICENSE  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/:  dependabot.yml  dependabot.yml
.openapi-generator/: FILES
_modules/: index.html
_sources/: README.rst.txt
_static/: documentation_options.js
about/: authors.html  changelog.html
addressannotator/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
annotator/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
cli/: __main__.py  nlp-cli.html  overview.html
datanode/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
dateannotator/: api_client.py
docs/: Annotation.md  AnnotationApi.md  AnnotationCreateRequest.md  AnnotationCreateResponse.md  AnnotationId.md  AnnotationName.md  AnnotationSet.md  AnnotationSource.md  AnnotationStore.md  AnnotationStoreApi.md  AnnotationStoreCreateResponse.md  AnnotationStoreId.md  AnnotationStoreName.md  Dataset.md  DatasetApi.md  DatasetApi.rst  DatasetCreateResponse.md  DatasetId.md  DatasetName.md  DateOffsetConfig.md  DeidentificationStep.md  DeidentifiedNoteApi.md  DeidentifyRequest.md  DeidentifyResponse.md  Error.md  FhirStore.md  FhirStoreApi.md  FhirStoreCreateResponse.md  FhirStoreId.md  FhirStoreName.md  HealthCheck.md  HealthCheckApi.md  License.md  MaskingCharConfig.md  Note.md  NoteApi.md  NoteCreateRequest.md  NoteCreateResponse.md  NoteId.md  NoteResourceName.md  (+73 more)
evaluate/: evaluation.py
example_notebooks/: COVID_symptom_evaluation.ipynb  data_quality.ipynb  independent_notebook.ipynb
(+689 files in other folders)
