[metadata]
name = nlpsandbox-client
version = attr: nlpsandboxclient.__version__
description = NLP Sandbox Client Library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://nlpsandbox.io
author = The NLP Sandbox Team
author_email = team@nlpsandox.io
license = Apache
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Bio-Informatics
    Intended Audience :: Developers
    Intended Audience :: Science/Research
project_urls =
    Bug Tracker = https://github.com/nlpsandbox/nlpsandbox-client/issues
    Source Code = https://github.com/nlpsandbox/nlpsandbox-client

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    certifi >= 14.05.14
    click >= 7.1.2
    jsonschema >= 3.2.0
    python_dateutil >= 2.5.3
    setuptools >= 21.0.0
    six >= 1.10
    synapseclient >= 2.2.0
    urllib3 >= 1.15.1
    nulltype >= 2.3.1
    nltk >= 3.6.7
python_requires = >=3.7, <3.10

[options.entry_points]
console_scripts =
    nlp-cli = nlpsandboxclient.cli.__main__:main

[flake8]

# pep8 default is 80
max-line-length: 120

exclude =
    build
    nlpsandbox
    test

[coverage:run]
omit =
    test/*